Added timey api

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "hjson": "^3.2.1",
     "jshashes": "^1.0.8",
-    "lowdb": "^1.0.0"
+    "lowdb": "^1.0.0",
+    "moment": "^2.25.3"
   }
 }
