--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hjson": "^3.2.1",
     "jshashes": "^1.0.8",
     "lowdb": "^1.0.0",
-    "moment": "^2.25.3"
+    "moment": "^2.25.3",
+    "psl": "^1.8.0"
   }
 }
