--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "hjson": "^3.2.1",
     "jshashes": "^1.0.8",
     "lowdb": "^1.0.0",
     "moment": "^2.25.3",
     "psl": "^1.8.0"
+  },
+  "devDependencies": {
+    "form-data": "^3.0.0"
   }
 }
