Google Cloud Multi-Regions integration Just testing Multi-Regions thing...

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,22 +1,52 @@
 steps:
-  # Build the container image
+  # Build the container image (Global Region: us-west1)
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'europe-west4-docker.pkg.dev/$PROJECT_ID/images/wv-core:$COMMIT_SHA', '.']
-  # Push the container image to Artifact Registry
+    args: ['build', '-t', 'us-west1-docker.pkg.dev/$PROJECT_ID/images/api:$COMMIT_SHA', '.']
+  # Push the container image to Artifact Registry (Global Region: us-west1)
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'europe-west4-docker.pkg.dev/$PROJECT_ID/images/wv-core:$COMMIT_SHA']
-  # Deploy container image to Cloud Run
+    args: ['push', 'us-west1-docker.pkg.dev/$PROJECT_ID/images/api:$COMMIT_SHA']
+
+  # Deploy container image to Cloud Run (Region: europe-west1)
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
     - 'run'
     - 'deploy'
-    - 'wv-core'
+    - 'api-europe'
     - '--image'
-    - 'europe-west4-docker.pkg.dev/$PROJECT_ID/images/wv-core:$COMMIT_SHA'
+    - 'us-west1-docker.pkg.dev/$PROJECT_ID/images/api:$COMMIT_SHA'
     - '--region'
-    - 'europe-west4'
+    - 'europe-west1'
     - '--platform'
     - 'managed'
     - '--allow-unauthenticated'
+
+  # Deploy container image to Cloud Run (Region: us-central1)
+  # - name: 'gcr.io/cloud-builders/gcloud'
+  #   args:
+  #   - 'run'
+  #   - 'deploy'
+  #   - 'api-us'
+  #   - '--image'
+  #   - 'us-west1-docker.pkg.dev/$PROJECT_ID/images/api:$COMMIT_SHA'
+  #   - '--region'
+  #   - 'us-central1'
+  #   - '--platform'
+  #   - 'managed'
+  #   - '--allow-unauthenticated'
+
+  # Deploy container image to Cloud Run (Region: asia-northeast1)
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - 'run'
+    - 'deploy'
+    - 'api-asia'
+    - '--image'
+    - 'us-west1-docker.pkg.dev/$PROJECT_ID/images/api:$COMMIT_SHA'
+    - '--region'
+    - 'asia-northeast1'
+    - '--platform'
+    - 'managed'
+    - '--allow-unauthenticated'
+
 images:
-  - 'europe-west4-docker.pkg.dev/$PROJECT_ID/images/wv-core:$COMMIT_SHA'
+  - 'us-west1-docker.pkg.dev/$PROJECT_ID/images/api:$COMMIT_SHA'
