--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,6 +24,20 @@ steps:
     args: ['push', 'us-west1-docker.pkg.dev/$PROJECT_ID/images/global-api:$COMMIT_SHA']
 
   # 
+  # @api Tunnels
+  # API for tcp/http tunnels
+  # 
+  # @region us-west1
+  # @
+  
+  # Building container
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'us-west1-docker.pkg.dev/$PROJECT_ID/images/tunnels-api:$COMMIT_SHA', 'tunnels']
+  # Pushing it to Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'us-west1-docker.pkg.dev/$PROJECT_ID/images/tunnels-api:$COMMIT_SHA']
+
+  # 
   # @section Deployment
   # Here we'll deploy all docker images
   # and services to Google Cloud Run
@@ -44,5 +58,22 @@ steps:
     - 'managed'
     - '--allow-unauthenticated'
 
+
+  # @service Tunnels API
+  # @region europe-west1
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - 'run'
+    - 'deploy'
+    - 'api-tunnels-europe'
+    - '--image'
+    - 'us-west1-docker.pkg.dev/$PROJECT_ID/images/tunnels-api:$COMMIT_SHA'
+    - '--region'
+    - 'europe-west1'
+    - '--platform'
+    - 'managed'
+    - '--allow-unauthenticated'
+
 images:
   - 'us-west1-docker.pkg.dev/$PROJECT_ID/images/global-api:$COMMIT_SHA'
+  - 'us-west1-docker.pkg.dev/$PROJECT_ID/images/tunnels-api:$COMMIT_SHA'
