--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,10 +18,10 @@ steps:
   
   # Building container
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$GOOGLE_CLOUD_PROJECT/api-global', 'global']
+    args: ['build', '-t', 'gcr.io/stately-sentry-269110/api-global', 'global']
   # Pushing it to Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$GOOGLE_CLOUD_PROJECT/api-global']
+    args: ['push', 'gcr.io/stately-sentry-269110/api-global']
 
   # 
   # @api Tunnels
@@ -32,10 +32,10 @@ steps:
   
   # Building container
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$GOOGLE_CLOUD_PROJECT/api-tunnels', 'tunnels']
+    args: ['build', '-t', 'gcr.io/stately-sentry-269110/api-tunnels', 'tunnels']
   # Pushing it to Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$GOOGLE_CLOUD_PROJECT/api-tunnels']
+    args: ['push', 'gcr.io/stately-sentry-269110/api-tunnels']
 
   # 
   # @section Deployment
@@ -51,7 +51,7 @@ steps:
     - 'deploy'
     - 'api-tunnels-europe'
     - '--image'
-    - 'gcr.io/$GOOGLE_CLOUD_PROJECT/api-tunnels'
+    - 'gcr.io/stately-sentry-269110/api-tunnels'
     - '--region'
     - 'europe-west1'
     - '--platform'
@@ -66,11 +66,11 @@ steps:
     - 'deploy'
     - 'api-europe'
     - '--image'
-    - 'gcr.io/$GOOGLE_CLOUD_PROJECT/api-global'
+    - 'gcr.io/stately-sentry-269110/api-global'
     - '--region'
     - 'europe-west1'
     - '--platform'
     - 'managed'
     - '--allow-unauthenticated'
 
-images: ["gcr.io/$GOOGLE_CLOUD_PROJECT/api-global", "gcr.io/$GOOGLE_CLOUD_PROJECT/api-tunnels"]
+images: ["gcr.io/stately-sentry-269110/api-global", "gcr.io/stately-sentry-269110/api-tunnels"]
