--- a/tunnels/package.json
+++ b/tunnels/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/secret-manager": "^3.1.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lowdb": "^1.0.0"
