blog: Integrated Socket.io

--- a/blog/package.json
+++ b/blog/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "hjson": "^3.2.1",
     "lowdb": "^1.0.0",
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "socket.io": "^2.3.0"
   }
 }
