--- a/ideas/package.json
+++ b/ideas/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apicache": "^1.5.3",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-bearer-token": "^2.4.0",
     "hjson": "^3.2.1",
     "lowdb": "^1.0.0",
     "moment": "^2.27.0",
