--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -77,6 +77,19 @@ steps:
     args: ['push', 'gcr.io/stately-sentry-269110/api-ideas']
 
   # 
+  # @api Flow
+  # 
+  # @region us-west1
+  # @
+  
+  # Building container
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/stately-sentry-269110/api-flow', 'flow']
+  # Pushing it to Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/stately-sentry-269110/api-flow']
+
+  # 
   # @section Deployment
   # Here we'll deploy all docker images
   # and services to Google Cloud Run
@@ -157,4 +170,19 @@ steps:
     - 'managed'
     - '--allow-unauthenticated'
 
-images: ["gcr.io/stately-sentry-269110/api-global", "gcr.io/stately-sentry-269110/api-blog", "gcr.io/stately-sentry-269110/api-tunnels", "gcr.io/stately-sentry-269110/api-ideas", "gcr.io/stately-sentry-269110/api-alias"]
+  # @service Flow API
+  # @region europe-west1
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - 'run'
+    - 'deploy'
+    - 'api-flow-europe'
+    - '--image'
+    - 'gcr.io/stately-sentry-269110/api-flow'
+    - '--region'
+    - 'europe-west1'
+    - '--platform'
+    - 'managed'
+    - '--allow-unauthenticated'
+
+images: ["gcr.io/stately-sentry-269110/api-global", "gcr.io/stately-sentry-269110/api-blog", "gcr.io/stately-sentry-269110/api-tunnels", "gcr.io/stately-sentry-269110/api-ideas", "gcr.io/stately-sentry-269110/api-alias", "gcr.io/stately-sentry-269110/api-flow"]
